tests/error/strlen_type.src
.IPPcode18
strlen GF@a int@9